fix: align navbar icons

--- a/src/extension/features/general/nav-display-density/compact.css
+++ b/src/extension/features/general/nav-display-density/compact.css
@@ -5,8 +5,3 @@
 .nav-main li {
   height: 2.2rem !important;
 }
-
-.tk-navlink i {
-  padding-left: 15px !important;
-  margin-right: 15px !important;
-}
