--- a/src/extension/features/general/nav-display-density/slim.css
+++ b/src/extension/features/general/nav-display-density/slim.css
@@ -11,8 +11,3 @@
   margin: 0 !important;
   border-radius: 0 !important;
 }
-
-.tk-navlink i {
-  padding-left: 15px !important;
-  margin-right: 15px !important;
-}
